<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cookbook</string>
    <string name="welcome">Welcome to the cookbook!</string>
    <string name="action_new_recipe">New Recipe</string>
    <string name="action_save_recipe">Save</string>
    <string name="action_save_recipes">Save Recipes</string>
    <string name="action_export_recipes">Export Recipes</string>
    <string name="action_import_recipes">Import Recipes</string>
    <string name="action_save_recipes_confirm">Recipes saved!</string>
    <string name="action_save_recipes_error">Error on write recipes</string>
    <string name="action_import_recipes_confirm">Recipes imported!</string>
    <string name="file_not_found">File not found ((╯°□°）╯︵ ┻━┻)!</string>
    <string name="error_read">Error on read recipes</string>
    <string name="error_write">Error on write recipes</string>
    <string name="action_import_recipes_error">Error on import</string>
    <string name="action_export_recipes_confirm">Recipes exported!</string>
    <string name="action_export_recipes_error">Error on export!</string>
    <string name="action_edit_recipe">Edit</string>
    <string name="action_delete_recipe">Delete</string>
    <string name="action_add_ingredient">Add ingredient</string>
    <string name="action_add_step">Add step</string>
    <string name="action_share">Share…</string>

    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>

    <string name="tab_name_recipe">Recipe</string>
    <string name="tab_name_ingredients">Ingredients</string>
    <string name="tab_name_steps">Steps</string>

    <string name="step_view_title">Step</string>
    <string name="step_view_ok">OK</string>

    <string name="step_edit_title">Edit Step</string>
    <string name="ingredient_edit_title">Edit Ingredient</string>
    <string name="edit_ok">OK</string>
    <string name="edit_cancel">Cancel</string>

    <string name="delete_dialog_title">Delete recipe : </string>
    <string name="delete_dialog_text">Are you sur to delete this recipe?</string>
    <string name="delete_dialog_step_title">Delete step</string>
    <string name="delete_dialog_step_text">Are you sur to delete this step?</string>
    <string name="delete_dialog_ingredient_title">Delete ingredient</string>
    <string name="delete_dialog_ingredient_text">Are you sur to delete this ingredient?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>

    <string name="new_recipe">New Recipe</string>
    <string name="new_ingredient">New Ingredient</string>
    <string name="new_step">New Step</string>

    <string name="import_chooser">Choose file to import</string>
    <string name="export_chooser">Choose file to export recipes</string>
</resources>
