<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cookbook="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_ingredient"
        android:icon="@drawable/ic_add_black_36dp"
        android:title="@string/action_add_ingredient"
        android:visible="false"
        cookbook:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_step"
        android:icon="@drawable/ic_add_black_36dp"
        android:title="@string/action_add_step"
        android:visible="false"
        cookbook:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black_36dp"
        android:title="@string/action_save_recipe"
        cookbook:showAsAction="ifRoom" />
</menu>
